force-app/main/default/objects/RelatedUserSalesTeam__c/RelatedUserSalesTeam__c.object-meta.xml
<CustomObject>
    
    <label>Equipe de Vendas X Usuarios</label>
    <nameField>
        <displayFormat>EVU-{0000}</displayFormat>
        <label>Nome de Equipe de Vendas dos Usuarios</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipe de Vendas X Usuarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>