force-app/main/default/objects/RelatedUserSalesTeam__c/fields/RTV__c.field-meta.xml
<CustomField>
    <fullName>RTV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RTV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RelatedUserSalesTeams</relationshipName>
    <type>Lookup</type>
</CustomField>