force-app/main/default/objects/RelatedUserSalesTeam__c/fields/SalesOrgExternalId__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgExternalId__c</fullName>
    <formula>SalesTeam__r.SalesOrg__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organizacao de Vendas</label>
    <type>Text</type>
</CustomField>