force-app/main/default/objects/RelatedUserSalesTeam__c/fields/SalesTeamName__c.field-meta.xml
<CustomField>
    <fullName>SalesTeamName__c</fullName>
    <formula>SalesTeam__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipe de Vendas</label>
    <type>Text</type>
</CustomField>